--- a/config/config-dev.yaml
+++ b/config/config-dev.yaml
@@ -1,14 +1,11 @@
-file: developer config
----
 app:
-  port: 8000
+  port: :8000
 mysql:
   user: root
   pass: 123
-  #      host: 192.168.2.100
-  host: 127.0.0.1
+  host: 192.168.2.100
+  #  host: 127.0.0.1
   port: 3306
   db: store_manage
   charset: utf8mb4
-#      - "root:123@tcp(192.168.2.100:3306)/store_manage?charset=utf8mb4&parseTime=True&loc=Local"
 logger: ~
